tests/fail/struct_attr_1.rs
use salak::*;

#[derive(Debug, FromEnvironment)]
#[salak(default = "xxx")]
pub struct FailEnum {}

fn main() {}
